[gd_scene load_steps=10 format=3 uid="uid://dfwss1qqr6jfl"]

[ext_resource type="Script" uid="uid://bur3thxg2pdq2" path="res://scripts/common/menu.gd" id="1_w6t7d"]
[ext_resource type="Theme" uid="uid://cxf4vi0rbjosd" path="res://shaders/subtitle2_intro_theme.tres" id="2_t076g"]
[ext_resource type="Texture2D" uid="uid://t32ejfxe5mw4" path="res://assets/menus/menu_bg.png" id="3_8qoiq"]
[ext_resource type="Theme" uid="uid://rbyh38ikqedj" path="res://shaders/reset_separator_color.tres" id="4_gq33n"]
[ext_resource type="Texture2D" uid="uid://12i03in4xkfb" path="res://assets/menus/logo.png" id="4_w6t7d"]
[ext_resource type="Theme" uid="uid://ckpnhtgdjvgmd" path="res://shaders/primary_btn_theme.tres" id="7_a2pm3"]

[sub_resource type="Animation" id="Animation_vt17n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("logo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(416, 50)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("buttons:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(421, 450)]
}

[sub_resource type="Animation" id="Animation_asxd2"]
resource_name = "reveal"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("logo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(416, -350), Vector2(450, 60)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("buttons:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(421, 750), Vector2(421, 450)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ei4xi"]
_data = {
&"RESET": SubResource("Animation_vt17n"),
&"reveal": SubResource("Animation_asxd2")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_w6t7d")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_t076g")
texture = ExtResource("3_8qoiq")
expand_mode = 2

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ei4xi")
}
autoplay = "reveal"

[node name="logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -274.0
offset_right = 160.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_t076g")
texture = ExtResource("4_w6t7d")

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 450.0
offset_right = 815.0
offset_bottom = 560.0
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="buttons"]
layout_mode = 2

[node name="start_btn" type="Button" parent="buttons/VBoxContainer"]
custom_minimum_size = Vector2(327, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_a2pm3")
text = "INICIAR JOGO"

[node name="HBoxContainer" type="HBoxContainer" parent="buttons/VBoxContainer"]
layout_mode = 2

[node name="quit_btn" type="Button" parent="buttons/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_a2pm3")
text = "SAIR DO JOGO"

[node name="VSeparator" type="VSeparator" parent="buttons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 77)
layout_mode = 2
theme = ExtResource("4_gq33n")

[node name="ranking_btn" type="Button" parent="buttons/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_a2pm3")
text = "   CLASSIFICAÇÃO   "

[node name="form" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.5
offset_top = 84.0
offset_right = 69.5
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSeparator" type="VSeparator" parent="form"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("4_gq33n")

[node name="label" type="Label" parent="form"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 21
text = "Digite o seu nome:"

[node name="input" type="LineEdit" parent="form"]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="form"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("4_gq33n")

[node name="error_label" type="Label" parent="form"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99359244, 0.010503309, 2.117753e-06, 1)
theme_override_font_sizes/font_size = 19
text = "O nome é obrigatório!"

[node name="VSeparator3" type="VSeparator" parent="form"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("4_gq33n")

[node name="confirm_btn" type="Button" parent="form"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_a2pm3")
text = "JOGAR AGORA!"

[connection signal="pressed" from="buttons/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="buttons/VBoxContainer/HBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="buttons/VBoxContainer/HBoxContainer/ranking_btn" to="." method="_on_ranking_btn_pressed"]
[connection signal="pressed" from="form/confirm_btn" to="." method="_on_confirm_btn_pressed"]
